# geospatial-data-analysis-lab-1

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements.txt  utils.py
app/: config.py  dependencies.py  init_dependencies.py  main.py
app/routers/: routers.py
app/schemas/: app_config.py  responces.py  runtime_config.py
app/services/: service.py
examples/: sea_examples.ipynb
examples/data/: points_events.geojson  polygons_districts.geojson
routers/: routers.py
services/: service.py
src/sea/: __init__.py  exceptions.py
src/sea/services/: aggregation.py
src/sea/utils/: crs_conversion.py
src/sea_spatial_event_aggregation/: __init__.py
src/sea_spatial_event_aggregation/core/: geometries.py
src/sea_spatial_event_aggregation/services/: aggregation.py
src/sea_spatial_event_aggregation/utils/: crs_conversion.py
