[project]
name = "sea-spatial-event-aggregation"
version = "0.1.0"
description = "a library that allows users to aggregate poits based on their spatial distribution by city districts"
authors = [
    {name = "vorobiova-kristina"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi (>=2026.2.25)",
    "geopandas (>=1.1.3)",
    "numpy (>=2.4.3)",
    "packaging (>=26.0)",
    "pandas (>=3.0.1)",
    "pyogrio (>=0.12.1)",
    "pyproj (>=3.7.2)",
    "python-dateutil (>=2.9.0.post0)",
    "shapely (>=2.1.2)",
    "six (>=1.17.0)",
    "tzdata (>=2025.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
